# DepCoS2024

./: .dockerignore  .gitignore  Config.py  Dockerfile  Makefile  README.md  create_training_sets.py  main.py  main_grad_cam.py  print_p_values.py  pyproject.toml  requirements.txt  training_iterables.py
Evaluation/: get_paths.py  get_transform.py  training_validation.py  utilities.py
Models/: AudioModels.py  Augmentations.py  LeNet5.py  SpectrogramDataset.py  WaveformDataset.py  __init__.py  model_adjustment.py
graphical_representation/: calc_p_value.py  color_image.py  draw_augmentations.py  draw_models.py  file_names  print_best_models.py  print_model_superiority.py  print_p_values.py  print_vowel_superiority.py  result.py
